bin_PROGRAMS = logpi spi
logpi_SOURCES = lpi_main.c lpi_main.h logpi.c logpi.h parser.c parser.h netaddr_parser.c netaddr_parser.h chains.c chains.h match.c match.h mem.c mem.h mempool.c mempool.h util.c util.h hash.c hash.h xxhash.c xxhash.h parallel.c parallel.h bintree.c bintree.h ../include/sysdep.h ../include/config.h ../include/common.h
logpi_LDADD = -lpthread
spi_SOURCES = spi_main.c spi_main.h searchpi.c searchpi.h parser.c parser.h netaddr_parser.c netaddr_parser.h chains.c chains.h match.c match.h mem.c mem.h mempool.c mempool.h util.c util.h hash.c hash.h xxhash.c xxhash.h bintree.c bintree.h ../include/sysdep.h ../include/config.h ../include/common.h
spi_LDADD = 
